metadata/overlays/istio/metadata-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-deployment
  labels:
    component: grpc-server
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
