metadata/overlays/istio/metadata-envoy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-deployment
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
