metadata/overlays/istio/metadata-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
