metadata/overlays/istio/virtual-service-metadata-grpc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: metadata-grpc
spec:
  gateways:
  - istio-system/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /ml_metadata
    rewrite:
      uri: /ml_metadata
    route:
    - destination:
        host: $(metadata-envoy-service).$(ui-namespace).svc.$(ui-clusterDomain)
        port:
          number: 9090
    timeout: 300s
